--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://use.typekit.net/eqk1fen.css");
+
+/* For vars colors */
+:root {
+  --title-primary: #f3f3f3;
+  --paragraphs-primary: #cecece;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: source-sans-pro, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
